Bug 428206 - The "manage profiles..." menu entry doesn't open the right settings page
Summary: The "manage profiles..." menu entry doesn't open the right settings page
Status: RESOLVED FIXED
Alias: None
Product: konsole
Classification: Applications
Component: general (other bugs)
Version First Reported In: 20.08.2
Platform: Arch Linux Linux
: NOR minor
Target Milestone: ---
Assignee: Konsole Bugs
URL:
Keywords:
Depends on:
Blocks:
 
Reported: 2020-10-24 22:57 UTC by Jonathan Lestrelin
Modified: 2020-10-25 21:35 UTC (History)
2 users (show)

See Also:
Latest Commit:
Version Fixed/Implemented In: 20.08.3
Sentry Crash Report:


Attachments

Note You need to log in before you can comment on or make changes to this bug.
Description Jonathan Lestrelin 2020-10-24 22:57:57 UTC
SUMMARY

The "Settings > Manage profiles..." menu entry doesn't open the "Profiles" page in settings if another page in settings has already be opened before.

STEPS TO REPRODUCE
1. Go to "Settings > Configure Konsole..."
2. Open a page in settings other than "Profiles", for example "Thumbnails"
3. Close the settings
4. Go to "Settings > Manage profiles..."

OBSERVED RESULT

The settings window opens on the page selected previously.

EXPECTED RESULT

It should open on the "Profiles" page.


SOFTWARE/OS VERSIONS
Operating System: Arch Linux
KDE Plasma Version: 5.20.1
KDE Frameworks Version: 5.75.0
Qt Version: 5.15.1

(can reproduce on Neon Developper)
Comment 1 Justin Zobel 2020-10-25 07:46:28 UTC
Confirmed on Konsole git master.
Comment 2 Kurt Hindenburg 2020-10-25 16:26:22 UTC
Yes, this has been an issue for a while.  I'll look the MR shortly.
Comment 3 Kurt Hindenburg 2020-10-25 17:33:25 UTC
Git commit 9a4844d57baa51a254efb469255811c075906a94 by Kurt Hindenburg, on behalf of Carlos Alves.
Committed on 25/10/2020 at 17:32.
Pushed by hindenburg into branch 'master'.

For "Manage Profiles" always open the "Profiles" page in settings

If the user selected another settings page, "Manage Profiles..." would
open that page instead of "Profiles".
FIXED-IN: 20.08.3

!256

M  +5    -1    src/MainWindow.cpp

https://invent.kde.org/utilities/konsole/commit/9a4844d57baa51a254efb469255811c075906a94
Comment 4 Kurt Hindenburg 2020-10-25 17:46:47 UTC
Git commit e694358a1cde0f1cedeef5698d632691c492c199 by Kurt Hindenburg, on behalf of Carlos Alves.
Committed on 25/10/2020 at 17:34.
Pushed by hindenburg into branch 'release/20.08'.

For "Manage Profiles" always open the "Profiles" page in settings

If the user selected another settings page, "Manage Profiles..." would
open that page instead of "Profiles".
FIXED-IN: 20.08.3

!256

(cherry picked from commit 9a4844d57baa51a254efb469255811c075906a94)

M  +5    -1    src/MainWindow.cpp

https://invent.kde.org/utilities/konsole/commit/e694358a1cde0f1cedeef5698d632691c492c199
Comment 5 Justin Zobel 2020-10-25 21:35:40 UTC
Thanks Kurt!