For "Manage Profiles" always open the "Profiles" page in settings

If the user selected another settings page, "Manage Profiles..." would
open that page instead of "Profiles".

BUG: 428206
FIXED-IN: 20.08.3

!256

(cherry picked from commit 9a4844d57baa51a254efb469255811c075906a94)